# automl-tabular

./: .gitignore  CHECKLIST_v1.1.0.md  FREEZE_v1.1.0.md  LICENSE  PERFORMANCE.md  PROJECT_SUMMARY.md  README.md  RELEASE_v1.1.0.md  SETUP.md  SMART_PREPROCESSING.md  STREAMLIT_DEMO.md  STREAMLIT_DEPLOY.md  benchmark_performance.py  benchmark_results.txt  demo_imputation.py  demo_smart_preprocessing.py  demo_streamlit.py  push_to_github.sh  pyproject.toml  quick_benchmark.py  quick_test_fixes.py  requirements.txt  run_automl.py  setup.py  test_fixed_report.py  test_performance.py  test_smart_preprocessing.py  test_streamlit.sh  test_wine_report.py
app/: cli_main.py  streamlit_app.py
examples/: demo.py  download_datasets.py  example_classification.csv  example_regression.csv  generate_data.py
examples/sample_reports/: adult_income_report.html  california_housing_report.html  titanic_report.html  wine_quality_report.html
src/automl_tabular/: __init__.py  orchestrator.py
src/automl_tabular/config/: __init__.py  default_config.yaml
src/automl_tabular/data/: __init__.py  loader.py  validators.py
src/automl_tabular/evaluation/: __init__.py  leaderboard.py  metrics.py  splitter.py
src/automl_tabular/explainability/: __init__.py  feature_importance.py  plots.py  text_summaries.py
src/automl_tabular/interfaces/: __init__.py  cli.py
src/automl_tabular/models/: __init__.py  algorithms.py  ensembles.py  registry.py  search.py
src/automl_tabular/preprocessing/: __init__.py  base.py  column_analyzer.py  profile.py  (+2 more)
tests/: test_loader.py  test_preprocessing.py
(+4 files in other folders)
