[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-tabular"
version = "0.1.0"
description = "Explainable AutoML for Tabular Data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "optuna>=3.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jinja2>=3.0.0",
    "pyyaml>=5.4.0",
    "typer>=0.4.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
automl = "automl_tabular.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
